// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource/ViewButton View 1`] = `
<div>
  <button
    aria-label="View YAML"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
    tabindex="0"
    title="View YAML"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <span />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots Resource/ViewButton View Open 1`] = `
<div
  aria-hidden="true"
>
  <button
    aria-label="View YAML"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
    tabindex="0"
    title="View YAML"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <span />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
